--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
-pandoc: 3.1.11
+pandoc: '3.2'
 pkgdown: 2.0.9
 pkgdown_sha: ~
 articles:
+  bakker: bakker.html
   simulation: simulation.html
-last_built: 2024-08-05T17:18Z
+last_built: 2024-10-04T21:49Z
 
